--- a/src/app/auth/Components/auth/login/login.component.html
+++ b/src/app/auth/Components/auth/login/login.component.html
@@ -1,7 +1,13 @@
 <div class="parent w-100 d-flex flex-column justify-content-center">
   <div class="row">
     <div class="col col-12">
-      <h2 class="text-center" i18n>Login</h2>
+      <div class="text-center">
+        <img
+          src="assets/Images/Animation - 1721128766462.gif"
+          width="200px"
+          alt=""
+        />
+      </div>
     </div>
     <div class="col col-8 m-auto">
       <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
