--- a/src/app/auth/Components/auth/login/login.component.html
+++ b/src/app/auth/Components/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="parent w-100 d-flex flex-column justify-content-center">
   <div class="row">
     <div class="col col-12">
-      <div class="text-center">
+      <div class="d-flex justify-content-center">
         <img
           src="assets/Images/Animation - 1721128766462.gif"
           width="200px"
@@ -72,7 +72,7 @@
       </form>
       <br />
       <app-or></app-or>
-      <app-social-google></app-social-google>
+      <!-- <app-social-google></app-social-google> -->
       <br />
 
       <div
