--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,9 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   width: 100%;
