--- a/src/app/auth/Components/auth/forget-password/forget-password.component.html
+++ b/src/app/auth/Components/auth/forget-password/forget-password.component.html
@@ -1,82 +1,7 @@
-<div class="row h-100">
-  <div class="col col-12 h-100">
-    <form
-      class="w-100 d-flex flex-column justify-content-center align-items-center h-100"
-      #forgetPasswordForm="ngForm"
-      (ngSubmit)="onSubmit(forgetPasswordForm)"
-    >
-      <div class="w-50">
-        <ng-lottie [options]="isSending() ? otpSending : otp"></ng-lottie>
-      </div>
-      <br />
-      <br />
-      <div class="formgroup w-50">
-        <input
-          [disabled]="isSending()"
-          type="email"
-          class="form-control"
-          id="email"
-          placeholder="Enter Email"
-          name="email"
-          required
-          email
-          ngModel
-        />
-      </div>
-
-      <br />
-      @if (isSending()) {
-      <app-timer></app-timer>
-      <p-inputOtp
-        [(ngModel)]="value"
-        [integerOnly]="true"
-        name="otp"
-        [length]="6"
-        [autofocus]="true"
-      />
-      }
-
-      <br />
-
-      <div class="form-group w-25">
-        @if(isSending() == false) {
-        <button
-          [disabled]="forgetPasswordForm.invalid || isLoading()"
-          type="submit"
-          class="btn btn-primary w-100 text-center"
-          i18n
-        >
-          @if (isLoading()) {
-          <app-loader-btn></app-loader-btn>
-          } @else { Send OTP}
-        </button>
-
-        }@else if(isSending() && timerisRunning() == true) {
-        <button
-          (click)="confirmOtp()"
-          [disabled]="value.length != 6 || isLoading()"
-          type="button"
-          class="btn btn-primary w-100 text-center"
-          i18n
-        >
-          @if (isLoading()) {
-          <app-loader-btn></app-loader-btn>
-          } @else { Check OTP}
-        </button>
-
-        }@else if (timerisRunning() == false) {
-        <button
-          type="button"
-          class="btn btn-primary w-100 text-center"
-          i18n
-          (click)="resendCode()"
-        >
-          @if (isLoading()) {
-          <app-loader-btn></app-loader-btn>
-          } @else { Resend OTP}
-        </button>
-        }
-      </div>
-    </form>
-  </div>
+<div
+  style="height: 95%; width: 100%"
+  class="d-flex justify-content-center align-items-center"
+>
+  <router-outlet></router-outlet>
 </div>
+<app-dots></app-dots>
