--- a/src/app/auth/Components/auth/login/login.component.html
+++ b/src/app/auth/Components/auth/login/login.component.html
@@ -68,7 +68,7 @@
       </form>
       <br />
       <app-or></app-or>
-      <!-- <app-social-google></app-social-google> -->
+      <app-social-google></app-social-google>
       <br />
 
       <div
