--- a/src/app/home/home-page/header/header.component.scss
+++ b/src/app/home/home-page/header/header.component.scss
@@ -1,5 +1,5 @@
 .parent {
-  background-color: #ff7f3e;
+  background-color: #ff5e0d;
   .container {
     nav {
       ul {
@@ -21,7 +21,7 @@
 }
 
 .active {
-  color: #ff7f3e !important;
+  color: #ff5e0d !important;
   background-color: white;
 }
 
