--- a/src/app/auth/Components/auth/forget-password/send-otp/send-otp.component.html
+++ b/src/app/auth/Components/auth/forget-password/send-otp/send-otp.component.html
@@ -1,11 +1,13 @@
-<div *ngIf="msg()" class="parent">
+<app-custom-error *ngIf="msg()" [msg]="msg()"></app-custom-error>
+
+<!-- <div *ngIf="msg()" class="parent">
   <div class="msg d-flex justify-content-start align-items-center gap-3">
     <i class="fa-regular fa-circle-xmark"></i>
     <p>
       <small>{{ msg() }}</small>
     </p>
   </div>
-</div>
+</div> -->
 <div class="row h-100">
   <div class="col col-12 h-100">
     <form
