--- a/src/app/auth/Components/auth/register/register.component.html
+++ b/src/app/auth/Components/auth/register/register.component.html
@@ -1,9 +1,12 @@
 <div class="parent w-100 d-flex flex-column justify-content-center">
   <div class="row">
     <div class="col col-12">
-      <h2 class="text-center" i18n>Register New Account</h2>
+      <div class="w-25 m-auto">
+        <ng-lottie [options]="option"></ng-lottie>
+      </div>
     </div>
   </div>
+  <br />
   <br />
   <div class="row">
     <div class="col col-8 m-auto">
