--- a/src/app/auth/Components/auth/social-google/social-google.component.html
+++ b/src/app/auth/Components/auth/social-google/social-google.component.html
@@ -9,5 +9,25 @@
 }@else {
 <div id="google" class="mt-2" (click)="onLoginWithGoogle()"></div>
 } -->
+<div id="google-signin-button" class="mt-2"></div>
 
-<div id="google" class="mt-2" (click)="onLoginWithGoogle()"></div>
+<!-- <div
+  id="g_id_onload"
+  data-client_id="658057831786-3itqmfslaba5o1de9hgbpvcls4bpbppi.apps.googleusercontent.com"
+  data-context="signin"
+  data-ux_mode="popup"
+  data-login_uri="http://localhost:4200"
+  data-nonce=""
+  data-auto_select="true"
+  data-itp_support="true"
+></div>
+
+<div
+  class="g_id_signin"
+  data-type="standard"
+  data-shape="rectangular"
+  data-theme="filled_blue"
+  data-text="continue_with"
+  data-size="large"
+  data-logo_alignment="left"
+></div> -->
