--- a/src/app/home/home-page/pictures/pictures.component.html
+++ b/src/app/home/home-page/pictures/pictures.component.html
@@ -2,3 +2,14 @@
   <app-main-pic></app-main-pic>
   <app-list-pic></app-list-pic>
 </div>
+
+<!-- <p-galleria
+        [(value)]="images"
+        [showIndicators]="true"
+        [showThumbnails]="false"
+        [responsiveOptions]="responsiveOptions"
+        [containerStyle]="{ 'max-width': '640px' }">
+            <ng-template pTemplate="item" let-item>
+                <img [src]="item.itemImageSrc" style="width: 100%; display: block;" />
+            </ng-template>
+    </p-galleria> -->
