--- a/src/app/home/home-page/pictures/pictures.component.html
+++ b/src/app/home/home-page/pictures/pictures.component.html
@@ -2,6 +2,7 @@
   <app-main-pic></app-main-pic>
   <app-list-pic></app-list-pic>
 </div>
+<app-add-pic></app-add-pic>
 
 <!-- <p-galleria
         [(value)]="images"
