--- a/src/app/home/home-page/pictures/add-pic/add-pic.component.scss
+++ b/src/app/home/home-page/pictures/add-pic/add-pic.component.scss
@@ -1,7 +1,7 @@
 div {
   width: 80px;
   height: 80px;
-  position: absolute;
+  position: fixed;
   bottom: 50px;
   right: 50px;
   cursor: pointer;
